Fixed #271 - Time Ratio Classifier - modularize

--- a/openchrom/plugins/net.openchrom.xxd.classifier.supplier.ratios/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.classifier.supplier.ratios/plugin.xml
@@ -63,9 +63,9 @@
       <ChromatogramSupplier
             description="Exports a Time Ratio Classifier Template "
             exportConverter="net.openchrom.xxd.classifier.supplier.ratios.core.TimeRatioExport"
-            fileExtension=".txt"
-            fileName="TimeRatioClassifierTemplate.txt"
-            filterName="Template Time Ratios (*.txt)"
+            fileExtension=".tir"
+            fileName="TimeRatioClassifierTemplate.tir"
+            filterName="Template Time Ratios (*.tir)"
             id="net.openchrom.xxd.classifier.supplier.ratios.timeRatioTemplateMSD"
             importMagicNumberMatcher="net.openchrom.xxd.classifier.supplier.ratios.core.MagicNumberMatcher"
             isExportable="true"
@@ -99,9 +99,9 @@
       <ChromatogramSupplier
             description="Exports a Time Ratio Classifier Template "
             exportConverter="net.openchrom.xxd.classifier.supplier.ratios.core.TimeRatioExport"
-            fileExtension=".txt"
-            fileName="TimeRatioClassifierTemplate.txt"
-            filterName="Template Time Ratios (*.txt)"
+            fileExtension=".tir"
+            fileName="TimeRatioClassifierTemplate.tir"
+            filterName="Template Time Ratios (*.tir)"
             id="net.openchrom.xxd.classifier.supplier.ratios.timeRatioTemplateCSD"
             importMagicNumberMatcher="net.openchrom.xxd.classifier.supplier.ratios.core.MagicNumberMatcher"
             isExportable="true"
