Fixed #272 -  Peak Review Template - harmonize file extension

--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -198,9 +198,9 @@
       <ChromatogramSupplier
             description="Exports a Review Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.ReviewExport"
-            fileExtension=".txt"
-            fileName="ReviewTemplate.txt"
-            filterName="Template Peak Review (*.txt)"
+            fileExtension=".prt"
+            fileName="ReviewTemplate.prt"
+            filterName="Template Peak Review (*.prt)"
             id="net.openchrom.xxd.process.supplier.templates.export.reviewTemplateMSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
@@ -267,9 +267,9 @@
       <ChromatogramSupplier
             description="Exports a Review Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.ReviewExport"
-            fileExtension=".txt"
-            fileName="ReviewTemplate.txt"
-            filterName="Template Peak Review (*.txt)"
+            fileExtension=".prt"
+            fileName="ReviewTemplate.prt"
+            filterName="Template Peak Review (*.prt)"
             id="net.openchrom.xxd.process.supplier.templates.export.reviewTemplateCSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
