Fixed #275 - Peak Identifier Template - file extension (*.pit)

--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -154,9 +154,9 @@
       <ChromatogramSupplier
             description="Exports a Peak Identifier Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.IdentifierExport"
-            fileExtension=".txt"
-            fileName="PeakIdentifierTemplate.txt"
-            filterName="Template Peak Identifier (*.txt)"
+            fileExtension=".pit"
+            fileName="PeakIdentifierTemplate.pit"
+            filterName="Template Peak Identifier (*.pit)"
             id="net.openchrom.xxd.process.supplier.templates.export.identifierTemplateMSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
@@ -223,9 +223,9 @@
       <ChromatogramSupplier
             description="Exports a Peak Identifier Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.IdentifierExport"
-            fileExtension=".txt"
-            fileName="PeakIdentifierTemplate.txt"
-            filterName="Template Peak Identifier (*.txt)"
+            fileExtension=".pit"
+            fileName="PeakIdentifierTemplate.pit"
+            filterName="Template Peak Identifier (*.pit)"
             id="net.openchrom.xxd.process.supplier.templates.export.identifierTemplateCSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
