Fixed #280 - Peak Detector Template - file extension (*.pdt)

--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -143,9 +143,9 @@
       <ChromatogramSupplier
             description="Exports a Peak Detector Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.DetectorExport"
-            fileExtension=".txt"
-            fileName="PeakDetectorTemplate.txt"
-            filterName="Template Peak Detector (*.txt)"
+            fileExtension=".pdt"
+            fileName="PeakDetectorTemplate.pdt"
+            filterName="Template Peak Detector (*.pdt)"
             id="net.openchrom.xxd.process.supplier.templates.export.detectorTemplateMSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
@@ -212,9 +212,9 @@
       <ChromatogramSupplier
             description="Exports a Peak Detector Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.DetectorExport"
-            fileExtension=".txt"
-            fileName="PeakDetectorTemplate.txt"
-            filterName="Template Peak Detector (*.txt)"
+            fileExtension=".pdt"
+            fileName="PeakDetectorTemplate.pdt"
+            filterName="Template Peak Detector (*.pdt)"
             id="net.openchrom.xxd.process.supplier.templates.export.detectorTemplateCSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
