Only build archives during mvn install

--- a/openchrom/products/net.openchrom.rcp.compilation.community.product/pom.xml
+++ b/openchrom/products/net.openchrom.rcp.compilation.community.product/pom.xml
@@ -27,12 +27,14 @@
 						<goals>
 							<goal>materialize-products</goal>
 						</goals>
+						<phase>install</phase>
 					</execution>
 					<execution>
 						<id>archive-products</id>
 						<goals>
 							<goal>archive-products</goal>
 						</goals>
+						<phase>install</phase>
 						<configuration>
 							<formats>
 								<linux>tar.gz</linux>
