--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -274,7 +274,14 @@
          <adapter
                type="org.eclipse.chemclipse.ux.extension.xxd.ui.methods.SettingsUIProvider">
          </adapter>
-      </factory>      
+      </factory>
+      <factory
+            adaptableType="net.openchrom.xxd.process.supplier.templates.settings.PeakIntegrationSettings"
+            class="net.openchrom.xxd.process.supplier.templates.ui.adapter.PeakIntegrationSettingsAdapterFactory">
+         <adapter
+               type="org.eclipse.chemclipse.ux.extension.xxd.ui.methods.SettingsUIProvider">
+         </adapter>
+      </factory>
    </extension>
    <extension
          point="org.eclipse.help.toc">
