Add an icon to the flexible .csv report.

--- a/openchrom/plugins/net.openchrom.chromatogram.xxd.report.supplier.csv.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.chromatogram.xxd.report.supplier.csv.ui/plugin.xml
@@ -10,4 +10,11 @@
             name="CSV Chromatogram Report">
       </page>
    </extension>
+   <extension
+         point="org.eclipse.chemclipse.xxd.process.ui.menu.icon">
+      <icon
+            class="net.openchrom.chromatogram.xxd.report.supplier.csv.ui.icon.MenuIcon"
+            id="net.openchrom.chromatogram.xxd.report.supplier.openchrom.chromatogramReportCSV">
+      </icon>
+   </extension>
 </plugin>
