Add a template process icon.

--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/build.properties
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                plugin.xml,\
                controls.xml,\
-               html/
+               html/,\
+               icons/
