--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -282,6 +282,13 @@
                type="org.eclipse.chemclipse.ux.extension.xxd.ui.methods.SettingsUIProvider">
          </adapter>
       </factory>
+      <factory
+            adaptableType="net.openchrom.xxd.process.supplier.templates.settings.StandardsAssignerSettings"
+            class="net.openchrom.xxd.process.supplier.templates.ui.adapter.StandardsAssignerSettingsAdapterFactory">
+         <adapter
+               type="org.eclipse.chemclipse.ux.extension.xxd.ui.methods.SettingsUIProvider">
+         </adapter>
+      </factory>
    </extension>
    <extension
          point="org.eclipse.help.toc">
