Fixed #306 - Refactor Quant Ratio Classifier

--- a/openchrom/plugins/net.openchrom.xxd.classifier.supplier.ratios/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.classifier.supplier.ratios/plugin.xml
@@ -53,8 +53,8 @@
             description="Exports a Quant Ratio Classifier Template "
             exportConverter="net.openchrom.xxd.classifier.supplier.ratios.core.QuantRatioExport"
             fileExtension=".txt"
-            fileName="QuantRatioClassifierTemplate.txt"
-            filterName="Template Quant Ratios (*.txt)"
+            fileName="QuantRatioClassifierTemplate.qar"
+            filterName="Template Quant Ratios (*.qar)"
             id="net.openchrom.xxd.classifier.supplier.ratios.quantRatioTemplateMSD"
             importMagicNumberMatcher="net.openchrom.xxd.classifier.supplier.ratios.core.MagicNumberMatcher"
             isExportable="true"
@@ -89,8 +89,8 @@
             description="Exports a Quant Ratio Classifier Template "
             exportConverter="net.openchrom.xxd.classifier.supplier.ratios.core.QuantRatioExport"
             fileExtension=".txt"
-            fileName="QuantRatioClassifierTemplate.txt"
-            filterName="Template Quant Ratios (*.txt)"
+            fileName="QuantRatioClassifierTemplate.qar"
+            filterName="Template Quant Ratios (*.qar)"
             id="net.openchrom.xxd.classifier.supplier.ratios.quantRatioTemplateCSD"
             importMagicNumberMatcher="net.openchrom.xxd.classifier.supplier.ratios.core.MagicNumberMatcher"
             isExportable="true"
