Fixed #363 - Adjust file extensions for ISTD assigner/referencer

--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -165,9 +165,9 @@
       <ChromatogramSupplier
             description="Exports a Peak Standards Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.StandardsExport"
-            fileExtension=".txt"
-            fileName="StandardsAssignerTemplate.txt"
-            filterName="Template Standards Assigner (*.txt)"
+            fileExtension=".ist"
+            fileName="StandardsAssignerTemplate.ist"
+            filterName="Template Standards Assigner (*.ist)"
             id="net.openchrom.xxd.process.supplier.templates.export.standardsAssignerTemplateMSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
@@ -176,9 +176,9 @@
       <ChromatogramSupplier
             description="Exports a Peak Referencer Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.ReferencerExport"
-            fileExtension=".txt"
-            fileName="StandardsReferencerTemplate.txt"
-            filterName="Template Standards Referencer (*.txt)"
+            fileExtension=".irt"
+            fileName="StandardsReferencerTemplate.irt"
+            filterName="Template Standards Referencer (*.irt)"
             id="net.openchrom.xxd.process.supplier.templates.export.standardsReferencerTemplateMSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
@@ -234,9 +234,9 @@
       <ChromatogramSupplier
             description="Exports a Peak Standards Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.StandardsExport"
-            fileExtension=".txt"
-            fileName="StandardsAssignerTemplate.txt"
-            filterName="Template Standards Assigner (*.txt)"
+            fileExtension=".ist"
+            fileName="StandardsAssignerTemplate.ist"
+            filterName="Template Standards Assigner (*.ist)"
             id="net.openchrom.xxd.process.supplier.templates.export.standardsAssignerTemplateCSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
@@ -245,9 +245,9 @@
       <ChromatogramSupplier
             description="Exports a Peak Referencer Template "
             exportConverter="net.openchrom.xxd.process.supplier.templates.io.ReferencerExport"
-            fileExtension=".txt"
-            fileName="StandardsReferencerTemplate.txt"
-            filterName="Template Standards Referencer (*.txt)"
+            fileExtension=".irt"
+            fileName="StandardsReferencerTemplate.irt"
+            filterName="Template Standards Referencer (*.irt)"
             id="net.openchrom.xxd.process.supplier.templates.export.standardsReferencerTemplateCSD"
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
