--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.cdf/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.cdf/plugin.xml
@@ -9,6 +9,7 @@
             fileExtension=".CDF"
             filterName="ANDI/AIA CDF Chromatogram (*.CDF)"
             id="net.openchrom.msd.converter.supplier.cdf"
+            importContentMatcher="net.openchrom.msd.converter.supplier.cdf.converter.FileContentMatcher"
             importConverter="net.openchrom.msd.converter.supplier.cdf.converter.ChromatogramImportConverter"
             importMagicNumberMatcher="net.openchrom.msd.converter.supplier.cdf.converter.MagicNumberMatcher"
             isExportable="true"
