Amend #391 - Added support for the MicrobeNet MALDI XML format
Both import converter implementation as well as magic number matcher are
mandatory, even though only export is activated.

--- a/openchrom/plugins/net.openchrom.msd.converter.supplier.microbenet/plugin.xml
+++ b/openchrom/plugins/net.openchrom.msd.converter.supplier.microbenet/plugin.xml
@@ -6,6 +6,8 @@
       <DatabaseSupplier
             description="Writes MicrobeNet MALDI XML files."
             exportConverter="net.openchrom.msd.converter.supplier.microbenet.converter.DatabaseExportConverter"
+            importConverter="net.openchrom.msd.converter.supplier.microbenet.converter.DatabaseImportConverter"
+            importMagicNumberMatcher="net.openchrom.msd.converter.supplier.microbenet.converter.MagicNumberMatcher"            
             fileExtension=".xml"
             filterName="MicrobeNet MALDI (*.xml)"
             id="net.openchrom.msd.converter.supplier.microbenet"
