Use a shared license.

--- a/openchrom/features/net.openchrom.msd.converter.supplier.mzdb.feature/.project
+++ b/openchrom/features/net.openchrom.msd.converter.supplier.mzdb.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.openchrom.chromatogram.msd.supplier.mzdb.feature</name>
+	<name>net.openchrom.msd.identifier.supplier.mzdb.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
